@@ -1,17 +1,16 @@
-# $NetBSD: Makefile,v 1.2 2018/07/28 14:40:50 brook Exp $
+# $NetBSD: Makefile,v 1.3 2019/07/31 20:20:36 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/quantprog/
 COMMENT=	Functions to solve quadratic programming problems
-LICENSE=	gnu-gpl-v2
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	quadprog
-R_PKGVER=	1.5-5
+R_PKGVER=	1.5-7
 
 USE_LANGUAGES=	c fortran
 
-BUILDLINK_API_DEPENDS.R+=	R>=2.15.0
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
