@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3192 2019/07/31 20:19:10 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3193 2019/07/31 20:20:35 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5149,3 +5149,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-numDeriv to 2016.8.1.1 [brook 2019-07-31]
 	Updated math/R-poweRlaw to 0.70.2 [brook 2019-07-31]
 	Updated math/R-prob to 1.0.1 [brook 2019-07-31]
+	Updated math/R-quadprog to 1.5.7 [brook 2019-07-31]
